test/expected/explain_fd_i-cknr.out
explain int f(double)
              ^
15: error: function prototypes not supported until C89
